# parsimus

./: CMakeLists.txt  README.md
include/: parsimus.h
src/: primitive.cc
tests/: test_parsimus.cc
